--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <div class="left-container">
-        <header class="menu">
+       <div id="top"> <header class="menu">
             <div class="menu__left">
                 <div><button class="menu__left--button--cross"></button></div>
                 <div><button class="menu__left--button--logo"></button></div>
@@ -50,7 +50,8 @@
                 </ul>
             </nav>
         </header>
-
+</div>
+<div id="bottom">
         <footer class="menu-foot">
             <div class="menu-foot__bottom">
                 <div><button class="menu__bottom--button--tel"></button></div>
@@ -69,6 +70,7 @@
                 <a href="">CH</a>
             </div>
         </footer>
+    </div>
     </div>
 </body>
 
